# ai-enhanced-supply-chain

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  main.py  pyproject.toml  pytest.ini  query.py
.agent/skills/speckit-specify/: SKILL.md
.github/workflows/: pipeline.yml
.spec/001-sustainability-metrics/: plan.md  spec.md  tasks.md
.specify/: init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: agy.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
data/: distance_matrix_1.csv  distance_matrix_2.csv  inventory_s001_north_may_2022.csv  sustainability_config.json
demand-forecasting/: README.md  pyproject.toml  xgBoost.py
demand-forecasting/src/demand_forecasting/: __init__.py  __main__.py  model.py
docs/: architecture.drawio
inventory-optimization/: README.md  pyproject.toml
inventory-optimization/src/inventory_optimization/: __init__.py  __main__.py  solver.py
route-optimization/: distance_matrix_2.csv  pyproject.toml
route-optimization/src/route_optimization/: __init__.py
routing-optimization/: README.md  pyproject.toml
routing-optimization/src/routing_optimization/: __init__.py  __main__.py  solver.py
routing-optmization/: distance_matrix_1.csv  nearestneighbor-2opt.py
specs/: constitution.md
specs/001-sustainability-metrics/: 01_specify.md  02_plan.md  03_tasks.md  plan.md  spec.md  tasks.md
tests/: test_demand_forecasting.py  test_inventory_optimization.py  test_routing_optimization.py
