[project]
name = "ai-enhanced-supply-chain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.50.0",
    "huggingface-hub>=1.10.2",
    "openai>=2.32.0",
    "opencode-ai>=0.1.0a36",
    "ortools>=9.15.6755",
]

[tool.uv.workspace]
members = [
    "demand-forecasting",
    "inventory-optimization",
    "routing-optimization",
]
