[project]
name = "ai-enhanced-supply-chain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.50.0",
    "matplotlib>=3.10.8",
    "ortools>=9.15.6755",
]

[tool.uv.workspace]
members = [
    "demand-forecasting",
    "inventory-optimization",
    "routing-optimization",
]

[dependency-groups]
dev = [
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "scikit-learn>=1.8.0",
    "xgboost>=3.2.0",
]
