[project]
name = "ai-enhanced-supply-chain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.50.0",
    "matplotlib>=3.10.8",
    "ortools>=9.15.6755",
]

[tool.uv.workspace]
members = [
    "demand-forecasting",
    "inventory-optimization",
    "routing-optimization",
]

[dependency-groups]
dev = [
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.11",
    "scikit-learn>=1.8.0",
    "xgboost>=3.2.0",
]

 [tool.ruff]
 # Target version
 target-version = "py312"
 line-length = 100

 [tool.ruff.lint]
 # Enable Pyflakes (E) and pycodestyle (W) codes by default.
 select = ["E", "F", "B", "I"]
 ignore = ["E501"]

 # Allow autofix for all enabled rules (when `--fix`) is provided.
 fixable = ["ALL"]
 unfixable = []

 [tool.ruff.format]
 quote-style = "double"
 indent-style = "space"
 skip-magic-trailing-comma = false
 line-ending = "auto"
