[project]
name = "demand-forecasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rodrigo Bassil", email = "rcbassil@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "numpy",
    "xgboost",
    "scikit-learn",
    "matplotlib",
]

[project.scripts]
demand-forecasting = "demand_forecasting:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"
