[project]
name = "inventory-optimization"
version = "0.1.0"
description = "Inventory optimization algorithms for supply chain management"
readme = "README.md"
authors = [
    { name = "Rodrigo Bassil", email = "rcbassil@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
inventory-optimization = "inventory_optimization:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"
