[project]
name = "route-optimization"
version = "0.1.0"
description = "Delivery route optimization using Nearest Neighbor and 2-opt algorithms"
readme = "README.md"
authors = [
    { name = "Rodrigo Bassil", email = "rcbassil@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
route-optimization = "route_optimization:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"
