[project]
name = "routing-optimization"
version = "0.1.0"
description = "Delivery routing optimization using Nearest Neighbor and 2-opt algorithms"
readme = "README.md"
authors = [
    { name = "Rodrigo Bassil", email = "rcbassil@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "numpy",
    "ortools>=9.15.6755",
]

[project.scripts]
routing-optimization = "routing_optimization:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"
